observability/fea/grafana.http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: wac-hospital-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - group: ""
          kind: Service
          name: grafana-operator-grafana-service
          namespace: observability
          port: 3000
